# brawl

./: .gitignore  Cargo.toml
src/: battlelog.json  bot.rs  errors.rs  lib.rs  local_macros.rs  main.rs  net.rs  payloads.rs  requests.rs  types.rs
src/bot/: api.rs
src/net/: request.rs
src/requests/: has_payload.rs  json.rs  payload.rs  request.rs  requester.rs
