[package]
name = "brawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11.10", features = [
  "json",
  "stream",
  "multipart",
  "native-tls",
], default-features = false }
url = { version = "2", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
thiserror = "1.0.31"
either = "1.6.1"
pin-project = "1.0.10"
percent-encoding = "2.1.0"
